feat: Refactor backend